syntax = "proto3";
 
 option java_multiple_files = true;
 
 option java_package = "patientAdministrationService";
 option java_outer_classname = "PatientAdministrationServiceImpl";
 
 	//patientAdministrationService
 package PatientAdministrationService;
 
 service PatientAdministrationService {
 
 	//Client Streaming
 	rpc registerPatient(stream RegisterRequest) returns (RegisterResponse){} 
 	 
 }
 
 //Client Streaming
 message RegisterRequest{
 	
 	string name = 1;
 	string age = 2;
 	string gender = 3; 	 
 }
 
 message RegisterResponse{ 
 	string result = 1;	
 } 
 